# torna

./: .gitignore  LICENSE  Makefile  README.md
client/: package-lock.json  package.json  tsconfig.json
client/src/: bench_parallel.ts  concurrency.ts  demo.ts  demo_delegate.ts  demo_delete.ts  demo_events.ts  demo_rebalance.ts  events.ts  inspect.ts  invariants.ts  state.ts  stress_test.ts  test_invariants.ts  torna.ts
docs/: positioning.md
docs/html/: benchmarks.html  comparison.html  faq.html  how.html  index.html  license.html  problem.html  roadmap.html
docs/html/assets/: style.css
examples-rust/mini_orderbook/: Cargo.toml
examples-rust/mini_orderbook/src/: lib.rs
idl/: torna_btree.json
scripts/: ci.sh
sdk-rust/: Cargo.toml
sdk-rust/src/: lib.rs
src/torna_btree/: torna_btree.c
